k8s/calculator/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  labels:
    app: calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: calculator-container
        image: tonelomb/calculator-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
