k8s/calculator/service.yml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  labels:
    app: calculator
spec:
  selector:
    app: calculator
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8085 # Port du conteneur
    name: http
  type: NodePort # Peut être NodePort ou LoadBalancer selon les besoin
