k8s/calculator/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calculator-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - calculator-gateway
  http:
    - match:
        - uri:
            prefix: /calculator
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: calculator-service
